Add integration tutorial

--- a/source/_includes/header.html
+++ b/source/_includes/header.html
@@ -87,6 +87,12 @@
                       <li><a href="/documentation/code/disclaimer">Disclaimer</a></li>
                     </ul>
                   </div>
+                  <div class='sidebar-nav'>
+                    <h3>How To</h3>
+                    <ul class='nav nav-list'>
+                      <li><a href="/documentation/howto/integration-tutorial">Integration Tutorial</a></li>
+                    </ul>
+                  </div>
                 </div>
               </div>
               <div class='col9'>
