Adds Teams API documentation

--- a/source/_includes/header.html
+++ b/source/_includes/header.html
@@ -67,6 +67,7 @@
                       <li><a href="/documentation/rest/users/contact_methods">Contact Methods</a></li>
                       <li><a href="/documentation/rest/users/notification_rules">Notification Rules</a></li>
                       <li><a href="/documentation/rest/users/on_call">On-Call</a></li>
+                      <li class="nav-header "><a href="/documentation/rest/teams">Teams</a></li>
                       <li class="nav-header "><a href="/documentation/rest/webhooks">Webhooks</a></li>
                     </ul>
                   </div>
