--- a/source/_includes/header.html
+++ b/source/_includes/header.html
@@ -31,7 +31,7 @@
                   <h1><a class='brand' href='/'>PagerDuty</a></h1>
                 </div>
                 <div class='col9 main-header'>
-                  <h2>Developer Documentation</h2>
+                  <!-- <h2>Documentation</h2> -->
                 </div>
               </div>
             </div>
@@ -43,7 +43,7 @@
               <div class='col3'>
                 <div class='sidebar-menu'>
                   <div class='sidebar-nav'>
-                    <h3>REST API</h3>
+                    <h3>REST API Documentation</h3>
                     <ul class='nav nav-list'>
                       <li class="nav-header "><a href="/documentation/rest">General Information</a></li>
                       <li><a href="/documentation/rest/authentication">Authentication</a></li>
