Add tutorial to menu

--- a/source/_includes/header.html
+++ b/source/_includes/header.html
@@ -92,6 +92,7 @@
                     <h3>How To</h3>
                     <ul class='nav nav-list'>
                       <li><a href="/documentation/howto/integration-tutorial">Integration Tutorial</a></li>
+                      <li><a href="/documentation/howto/manually-trigger-an-incident/">Manual Incident Triggers</a></li>
                     </ul>
                   </div>
                 </div>
