--- a/source/_includes/header.html
+++ b/source/_includes/header.html
@@ -32,6 +32,9 @@
                 </div>
                 <div class='col9 main-header'>
                   <!-- <h2>Documentation</h2> -->
+                  {% if page.path != 'index.html' %}
+                    <h2><a href="https://v2.developer.pagerduty.com" id="learn-about-v2" class="pgd-button top-nav">Learn About API v2.0</a></h2>
+                  {% endif %}
                 </div>
               </div>
             </div>
