Rename integrations API to events API

--- a/source/_includes/header.html
+++ b/source/_includes/header.html
@@ -77,7 +77,7 @@
                   <div class='sidebar-nav'>
                     <h3>Integration</h3>
                     <ul class='nav nav-list'>
-                      <li class="nav-header "><a href="/documentation/integration/events">Integration API</a></li>
+                      <li class="nav-header "><a href="/documentation/integration/events">Events API</a></li>
                       <li><a href="/documentation/integration/events/trigger">Trigger</a></li>
                       <li><a href="/documentation/integration/events/acknowledge">Acknowledge</a></li>
                       <li><a href="/documentation/integration/events/resolve">Resolve</a></li>
