--- a/source/_includes/header.html
+++ b/source/_includes/header.html
@@ -46,7 +46,7 @@
               <div class='col3'>
                 <div class='sidebar-menu'>
                   <div class='sidebar-nav'>
-                    <h3>REST API Documentation</h3>
+                    <h3>REST API v1 Documentation</h3>
                     <ul class='nav nav-list'>
                       <li class="nav-header "><a href="/documentation/rest">General Information</a></li>
                       <li><a href="/documentation/rest/authentication">Authentication</a></li>
