Add banner to advise about API v1 deprecation

--- a/source/_includes/footer.html
+++ b/source/_includes/footer.html
@@ -21,6 +21,14 @@
         </ul>
       </footer>
     </div>
+    <div id='deprecation-warning'>
+      <div class='alert-warning alert alert-block'>
+        <p>
+          <strong>PagerDuty API v1 is deprecated.</strong>
+          Learn about <a href='https://v2.developer.pagerduty.com/docs/migrating-to-api-v2' target='v2'>migrating to API v2</a>, read the <a href='https://v2.developer.pagerduty.com/v2/docs/api-v2-frequently-asked-questions' target='v2'>API v1 End-of-Life FAQ</a>, or <a href='mailto:support@pagerduty.com'>contact our support team</a> for assistance.
+        </p>
+      </div>
+    </div>
     <script src="/assets/js/application.js" type="text/javascript"></script>
   </body>
 </html>
