Added Swiftype index tags to improve Support KB searches, removed Discourse & Olark, updated links, moved webhooks to more logical place

--- a/source/_includes/header.html
+++ b/source/_includes/header.html
@@ -18,7 +18,7 @@
     <!-- Add GA back here. -->
   </head>
   <body>
-    <div class='viewport'>
+    <div class='viewport' data-swiftype-index='false'>
       <div class='wrapper'>
         <div class='navbar navbar-inverse'>
           <div class='navbar-inner'>
@@ -71,16 +71,16 @@
                       <li><a href="/documentation/rest/users/notification_rules">Notification Rules</a></li>
                       <li><a href="/documentation/rest/users/on_call">On-Call</a></li>
                       <li class="nav-header "><a href="/documentation/rest/teams">Teams</a></li>
-                      <li class="nav-header "><a href="/documentation/rest/webhooks">Webhooks</a></li>
                     </ul>
                   </div>
                   <div class='sidebar-nav'>
-                    <h3>Integration</h3>
+                    <h3>Integrations &amp; Webhooks</h3>
                     <ul class='nav nav-list'>
-                      <li class="nav-header "><a href="/documentation/integration/events">Events API</a></li>
-                      <li><a href="/documentation/integration/events/trigger">Trigger</a></li>
-                      <li><a href="/documentation/integration/events/acknowledge">Acknowledge</a></li>
-                      <li><a href="/documentation/integration/events/resolve">Resolve</a></li>
+                      <li class="nav-header "><a href="/documentation/events">Events API</a></li>
+                      <li><a href="/documentation/events/trigger">Trigger</a></li>
+                      <li><a href="/documentation/events/acknowledge">Acknowledge</a></li>
+                      <li><a href="/documentation/events/resolve">Resolve</a></li>
+					  <li class="nav-header "><a href="/documentation/webhooks">Webhooks</a></li>
                     </ul>
                   </div>
                   <div class='sidebar-nav'>
