--- a/source/_layouts/main.html
+++ b/source/_layouts/main.html
@@ -12,7 +12,7 @@
                 </ul>
                 {% endif %}
 
-                <div class='section'>
+                <div class='section' data-swiftype-index='true'>
 
 {{ content }}
 
