Update REST API v1 messaging from deprecation to EOL

--- a/source/_includes/header.html
+++ b/source/_includes/header.html
@@ -33,7 +33,7 @@
                 <div class='col9 main-header'>
                   <!-- <h2>Documentation</h2> -->
                   {% if page.path != 'index.html' %}
-                    <h2><a href="https://v2.developer.pagerduty.com" id="learn-about-v2" class="pgd-button top-nav">Learn About API v2.0</a></h2>
+                    <h2><a href="https://v2.developer.pagerduty.com/docs/migrating-to-api-v2" id="learn-about-v2" class="pgd-button top-nav">Migrate to REST API v2</a></h2>
                   {% endif %}
                 </div>
               </div>
