--- a/source/assets/css/application.css
+++ b/source/assets/css/application.css
@@ -2009,11 +2009,15 @@ a.pgd-button:hover, a.pgd-button:active  {
     border: 0 none;
     -webkit-border-radius: 0;
     border-radius: 0;
-    border-top: 1px solid #eecc62;
+    border-top: 1px solid #FD9E8E;
     padding: 10px;
+	background-color: #FC8B8D;
 }
 #deprecation-warning .alert p {
     text-align: center;
+}
+#deprecation-warning .alert a {
+    color: #FFF4CB;
 }
 
 @media (max-width: 1500px) {
